<resources>
    <string name="app_name">Burdell\'s List</string>
    <string name="title_home">Home</string>
    <string name="title_post">Post</string>
    <string name="title_chat">Chat</string>
    <string name="title_shop">Shop</string>
    <string name="title_account">Profile</string>

    <string-array name="type">
        <item>Require</item>
        <item>Service</item>
    </string-array>

    <string-array name="category">
        <item>Moving</item>
        <item>Cleaning</item>
        <item>Touring</item>
        <item>Shopping</item>
        <item>Repairing</item>
        <item>Other</item>
    </string-array>

    <string-array name="select">
        <item>All</item>
        <item>Require</item>
        <item>Service</item>
        <item>Moving</item>
        <item>Cleaning</item>
        <item>Touring</item>
        <item>Shopping</item>
        <item>Repairing</item>
        <item>Other</item>
    </string-array>

    <string-array name="status">
        <item>active</item>
        <item>process</item>
        <item>finish</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>